# cortana-external

./: .gitignore  AGENTS.md  README.md  launchd-run.sh  main.go  package.json  pnpm-lock.yaml
backtester/: README.md  advisor.py  advisor_prediction_contract.py  alert_contract.py  backtest.py  buy_decision_calibration.py  canslim_alert.py  control_loop_schedule_check.py  dipbuyer_alert.py  dipbuyer_profile_report.py  execution_readiness_check.py  experimental_alpha.py  market_brief_snapshot.py  market_data_freshness_lane.py  nightly_discovery.py  ops_highway_snapshot.py  outcomes.py  prediction_accuracy_report.py  pyproject.toml  scan_performance.py  schedule_registry.py  strategy_alert_pipeline.py  trade_lifecycle_cycle.py  trade_lifecycle_report.py
backtester/control_loop/: drills.py
backtester/data/: __init__.py  confidence.py  dynamic_watchlist.json  intraday_breadth.py  leader_baskets.py  market_data_contract.py  market_data_provider.py  market_regime.py  polymarket_context.py  risk_signals.py  universe.py  wave2.py
backtester/decision_brain/: __init__.py  narrative.py  state.py  surfaces.py  weights.py
backtester/docs/: README.md  backtester-study-guide.md  consumer-contracts.md  intraday-breadth-override-prd.md  market-data-service-reference.md  polymarket-backtester-flow.md  roadmap.md
backtester/evaluation/: __init__.py  alert_posture.py  artifact_contracts.py  artifact_safety.py  benchmark_models.py  decision_review_metrics.py  prediction_accuracy.py
backtester/governance/: __init__.py
backtester/lifecycle/: __init__.py  entry_plan.py  ledgers.py  (+2 more)
(+633 files in other folders)
