[project]
name = "cortana-backtester"
version = "0.1.0"
description = "Python backtester and trading-analysis runtime for cortana-external."
requires-python = ">=3.12"
dependencies = [
  "alpaca-trade-api>=3.0.0",
  "numpy>=1.24.0",
  "pandas>=2.0.0",
  "python-dateutil>=2.8.0",
  "python-dotenv>=1.0.0",
  "requests>=2.28.0",
  "tabulate>=0.9.0",
  "tqdm>=4.65.0",
]

[dependency-groups]
dev = [
  "pytest>=9.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.uv]
package = false
